--- a/roles/tobiko/tasks/cleanup.yml
+++ b/roles/tobiko/tasks/cleanup.yml
@@ -7,7 +7,7 @@
     state: absent
 
 - name: "delegate {{ tobiko_params.method }} to plugins: {{ tobiko_params }}"
-  include_tasks: "{{ tobiko_plugin }}/tobiko-plugin.yml"
+  include_tasks: "{{ tobiko_plugin }}.yml"
   with_items: "{{ tobiko_config.plugins | reverse | list }}"
   loop_control:
     loop_var: tobiko_plugin
