--- a/roles/tobiko/tasks/setup_cloud.yml
+++ b/roles/tobiko/tasks/setup_cloud.yml
@@ -11,7 +11,7 @@
     default(true)
 
 - name: "delegate {{ tobiko_params.method }} to plugins: {{ tobiko_params }}"
-  include_tasks: "{{ tobiko_plugin }}/tobiko-plugin.yml"
+  include_tasks: "{{ tobiko_plugin }}.yml"
   with_items: "{{ tobiko_config.plugins }}"
   loop_control:
     loop_var: tobiko_plugin
