--- a/roles/tobiko/tasks/setup_test_resources.yml
+++ b/roles/tobiko/tasks/setup_test_resources.yml
@@ -2,7 +2,7 @@
 ---
 
 - name: "delegate {{ tobiko_params.method }} to plugins: {{ tobiko_params }}"
-  include_tasks: "{{ tobiko_plugin }}/tobiko-plugin.yml"
+  include_tasks: "{{ tobiko_plugin }}.yml"
   with_items: "{{ tobiko_config.plugins }}"
   loop_control:
     loop_var: tobiko_plugin
