--- a/test_cloud_upgrade.yml
+++ b/test_cloud_upgrade.yml
@@ -1,30 +1,14 @@
 
 ---
 
-- vars:
-    # setup cloud version
-    tobiko_setup_cloud_version:
+- name: step 1 - setup cloud
+  import_playbook: setup_cloud.yml
 
-    # upgrade cloud to version
-    tobiko_upgrade_cloud_version:
+- name: step 2 - populate test resources
+  import_playbook: setup_test_resources.yml
 
-    # whenever use fast forward upgrade instead of incremental
-    tobiko_upgrade_cloud_fast:
+- name: step 4 - upgrade cloud
+  import_playbook: upgrade_cloud.yml
 
-  hosts: localhost
-
-  tasks:
-
-    - name: step 1 - setup cloud
-      include_tasks: setup_cloud.yml
-
-    - name: step 2 - populate test resources
-      include_tasks: setup_test_resources.yml
-
-    - name: step 4 - upgrade cloud
-      include_tasks: upgrade_cloud.yml
-
-  post_tasks:
-
-    - name: step 5 final cleanup
-      include_tasks: cleanup.yml
+- name: step 5 final cleanup
+  import_playbook: cleanup.yml
