--- a/vars/tobiko-config.yml
+++ b/vars/tobiko-config.yml
@@ -13,6 +13,10 @@ tobiko:
   run_tests:
     # skip: true
     tests:
+
+      default:
+        - neutron-tempest-plugin
+
       after_setup_test_resources:
         - neutron-tempest-plugin
 
@@ -38,7 +42,7 @@ tobiko-infrared:
 
   upgrade_cloud:
     version: 13
-    fast: false
+    # fast: true
 
   virsh:
     host_address: "titan11.lab.eng.tlv2.redhat.com"
