Remove tester node as it is not well supported by tempest infrared plugin. See issue https://github.com/redhat-openstack/infrared/issues/334

--- a/roles/tobiko-infrared/tasks/run_tests/tempest.yml
+++ b/roles/tobiko-infrared/tasks/run_tests/tempest.yml
@@ -1,7 +1,7 @@
 
 ---
 
-- name: run {{ test_config_name }} tests agains OpenStack {{ tobiko_status.cloud.version }}
+- name: run {{ test_config_name }} tests against OpenStack {{ tobiko_status.cloud.version }}
   include_tasks: ../exec.yml
   vars:
     tobiko_infrared_exec_params: >
