--- a/roles/tobiko-infrared/defaults/main.yml
+++ b/roles/tobiko-infrared/defaults/main.yml
@@ -9,10 +9,10 @@ tobiko_infrared_default_config:
   src_dir: "{{ tobiko_config.work_dir }}/infrared/src/infrared"
   venv_dir: "{{ tobiko_config.work_dir }}/infrared"
   log_file: "{{ tobiko_config.log_dir }}/infrared.log"
+  mirror:
 
   setup_cloud:
     skip:
-    varsion:
 
   setup_test_resources:
     skip:
@@ -22,8 +22,6 @@ tobiko_infrared_default_config:
 
   upgrade_cloud:
     skip:
-    version:
-    fast: false
 
   cleanup:
     skip:
@@ -37,12 +35,14 @@ tobiko_infrared_default_config:
       - "controller:1"
       - "compute:2"
 
-  tripleo_undercloud:
-    mirror:
+  tripleo_undercloud: {}
 
   tripleo_overcloud:
     network_dvr: no
     overcloud_templates: none
+
+  tripleo_upgrade:
+    fast: false
 
   tempest:
     default:
