--- a/roles/tobiko-infrared/tasks/setup_cloud.yml
+++ b/roles/tobiko-infrared/tasks/setup_cloud.yml
@@ -9,22 +9,26 @@
            'cloud': {
              'setup_version':
                (tobiko_params.version or
-                tobiko_infrared_config.setup_cloud.version) | mandatory }},
+                tobiko_config.setup_cloud.version) | mandatory }},
            recursive=True) }}
+
 
 - include_tasks: "setup/virsh.yml"
   vars:
     virsh_config: "{{ tobiko_infrared_config.virsh }}"
+
 
 - include_tasks: "setup/tripleo_undercloud.yml"
   vars:
     tripleo_undercloud_config: >
       {{ tobiko_infrared_config.tripleo_undercloud }}
 
+
 - include_tasks: "setup/tripleo_overcloud.yml"
   vars:
     tripleo_overcloud_config: >
       {{ tobiko_infrared_config.tripleo_overcloud }}
+
 
 - name: setup {{ tobiko_params.version }} complete
   set_fact:
