Fetch overcloudrc from InfraRed undercloud node.

--- a/roles/tobiko-infrared/tasks/init.yml
+++ b/roles/tobiko-infrared/tasks/init.yml
@@ -1,6 +1,12 @@
 
 ---
 
+- name: install dos2unix
+  yum:
+    name: dos2unix
+    state: present
+
+
 - name: combine config file with default config
   set_fact:
     tobiko_infrared_config: >
