--- a/roles/tobiko-infrared/tasks/exec.yml
+++ b/roles/tobiko-infrared/tasks/exec.yml
@@ -12,6 +12,7 @@
       set -ex
       infrared "${params[@]}" > "${out_file}" 2> "${err_file}"
     ) >> "${log_file}" 2>&1
+    dos2unix "${out_file}" "${err_file}"
     cat "${out_file}" "${err_file}" >> "${log_file}"
 
   args:
