--- a/roles/tobiko-infrared/tasks/setup/tripleo_undercloud.yml
+++ b/roles/tobiko-infrared/tasks/setup/tripleo_undercloud.yml
@@ -2,14 +2,14 @@
 ---
 
 - name: setup OpenStack undercoud host
-  include_tasks: ../exec.yml
+  include_tasks: ../exec/infrared.yml
   vars:
     tobiko_infrared_exec_params: >
       tripleo-undercloud
         --version {{ tobiko_status.cloud.setup_version | quote }}
 
 - name: populate OpenStack undercoud
-  include_tasks: ../exec.yml
+  include_tasks: ../exec/infrared.yml
   vars:
     tobiko_infrared_exec_params: >
       tripleo-undercloud
