--- a/roles/tobiko-infrared/tasks/setup/virsh.yml
+++ b/roles/tobiko-infrared/tasks/setup/virsh.yml
@@ -2,7 +2,7 @@
 ---
 
 - name: setup OpeStack hypervisor host
-  include_tasks: ../exec.yml
+  include_tasks: ../exec/infrared.yml
   vars:
     tobiko_infrared_exec_params: >
       virsh
