--- a/hot/floating_ip.yaml
+++ b/hot/floating_ip.yaml
@@ -35,10 +35,10 @@ parameters:
 
 resources:
 
-  name:
-    type: OS::Tobiko::RandomName
+  random:
+    type: OS::Heat::RandomString
     properties:
-      prefix: floating_ip
+      length: 16
 
   network:
     type: OS::Neutron::Net
@@ -67,6 +67,7 @@ resources:
     type: OS::Neutron::FloatingIP
     properties:
       floating_network: { get_param: public_network }
+      port_id: { get_resource: port }
 
   security_group:
     type: OS::Neutron::SecurityGroup
@@ -80,7 +81,7 @@ resources:
           port_range_max: 22
 
   port:
-    type: OS::Neutron::Subnet
+    type: OS::Neutron::Port
     properties:
       network: { get_resource: network }
       security_groups:
@@ -89,7 +90,7 @@ resources:
   key_pair:
     type: OS::Nova::KeyPair
     properties:
-      # name: { get_attr: [name, name] }
+      name: { get_attr: [random, value] }
       public_key:  { get_param: public_key }
 
   server:
@@ -99,13 +100,7 @@ resources:
       flavor: { get_param: flavor }
       networks:
         - port: { get_resource: port }
-      key_name: { get_attr: [key_pair, name] }
-
-  floating_ip_association:
-    type: OS::Neutron::FloatingIPAssociation
-    properties:
-      floatingip_id: { get_resource: floating_ip }
-      port_id: { get_resource: port }
+      key_name: { get_attr: [random, value] }
 
 
 outputs:
