--- a/roles/tobiko-infrared/tasks/setup/tripleo_undercloud.yml
+++ b/roles/tobiko-infrared/tasks/setup/tripleo_undercloud.yml
@@ -2,16 +2,16 @@
 ---
 
 - name: setup OpenStack undercoud host
-  include_tasks: ../exec/infrared.yml
+  include_tasks: ../infrared/exec.yml
   vars:
-    tobiko_infrared_exec_params: >
+    infrared_args: >
       tripleo-undercloud
         --version {{ tobiko_status.cloud.setup_version | quote }}
 
 - name: populate OpenStack undercoud
-  include_tasks: ../exec/infrared.yml
+  include_tasks: ../infrared/exec.yml
   vars:
-    tobiko_infrared_exec_params: >
+    infrared_args: >
       tripleo-undercloud
         --images-task rpm
         --images-update yes
