--- a/setup_test_resources.yml
+++ b/setup_test_resources.yml
@@ -13,4 +13,4 @@
         tobiko_params:
           method: setup_test_resources
           hot_templates:
-            - hot/templates/floating_ip.yaml
+            - hot/floating_ip.yaml
