--- a/vars/tobiko-config.yml
+++ b/vars/tobiko-config.yml
@@ -42,8 +42,8 @@ tobiko-infrared:
   # dry_run: true
 
   virsh:
-    host_address: localhost
-    host_key: ~/.ssh/id_rsa
+    # host_address: localhost
+    # host_key: ~/.ssh/id_rsa
     host_memory_overcommit: false
 
   tripleo_undercloud:
